# gpwebpay

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.pip  requirements.txt  tasks.py
.github/workflows/: build.yml  ci.yml  coverage.yml  publish.yml  python-app.yml  tests.yml
demoshop/: app.py
demoshop/static/: app.js  main.css
demoshop/static/data/: products.json
demoshop/templates/: header.html  index.html  layout.html
gpwebpay/: __init__.py  client.py  config.py  exceptions.py  gpwebpay.py  pytest.ini  return_codes.py  signing.py
tests/: conftest.py  test_client.py  test_gpwebpay.py  test_signing.py  tests.py
