[tool.poetry]
name = "gpwebpay"
version = "0.1.3"
description = "GPWebPay Gateway access with Python"
license = "MIT"
authors = ["Filipa Andrade <filipa.andrade@gmail.com>"]
maintainers = ["Filipa Andrade <filipa.andrade@gmail.com>"]
readme = "README.md"
repository = "https://github.com/vintesk/gpwebpay"

[tool.poetry.dependencies]
python = "^3.6"
cryptography="2.8"
requests="2.23"
python-dotenv = "^0.13.0"
invoke = "^1.4.1"
tox = "^3.17.1"

[tool.poetry.dev-dependencies]
black = "19.10b0"
flake8 = "^3.8.1"
pylint = "^2.5.3"
pytest = "5.4.1"
pytest-cov = "^2.10.0"
responses = "^0.10.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
