[project]
name = "gpwebpay"
version = "1.0.0"
description = "A modern Python client for the GPWebPay payment gateway"
license = "MIT"
authors = [{ name = "Filipa Andrade", email = "filipa.andrade@gmail.com" }]
maintainers = [{ name = "Filipa Andrade", email = "filipa.andrade@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["gpwebpay", "payments", "payment-gateway"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "cryptography>=43",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/filias/gpwebpay"
Repository = "https://github.com/filias/gpwebpay"
Issues = "https://github.com/filias/gpwebpay/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gpwebpay"]

[tool.pytest.ini_options]
addopts = "--cov=gpwebpay --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["gpwebpay"]
